# ckb-dao-cobuild-poc

./: .gitignore  .gitmodules  .gitpod.yml  COPYING  Cargo.toml  Makefile  README.md  capsule.toml  contracts.mk  deployment.toml  env.example  jest.config.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: capsule.yml  cargo.yml  ci.yml  pnpm.yml
contracts/__tests__/: Cargo.toml
contracts/__tests__/src/: lib.rs  tests.rs
contracts/ckb-dao-cobuild-type-script/: Cargo.toml
contracts/dao-action-verifier/: Cargo.toml
contracts/dao-action-verifier/src/: constants.rs  dao.rs  derived_ckb_accounting.rs  derived_dao_action_data.rs  error.rs  error_code.rs  keys.rs  main.rs
contracts/joyid-cobuild-poc/: Cargo.toml  README.md
contracts/joyid-cobuild-poc/src/: entry.rs  error.rs  error_include.rs  generate_sighash_all.rs  main.rs
crates/ckb-dao-cobuild-schemas/: Cargo.toml
crates/ckb-dao-cobuild-schemas/src/: lib.rs
crates/ckb-dao-cobuild-schemas/src/schemas/: dao.rs  mod.rs
crates/ckb-dao-cobuild-schemas/tests/: integration_test.rs
docs/: CONTRIBUTING.md  dev.md  packing-verifier.md  poc-review-guide.md
migrations/dao-action-verifier-testnet/: 2024-02-18-082928.json
migrations/templates/: ckb_auth.toml  dao-action-verifier.toml  joyid.toml  omnilock.toml
migrations/testnet/: 2023-12-21-060954.json
schemas/: dao.mol
src/actions/: claim.js  deposit.js  fetch-assets.js  get-cell.js  get-header-by-number.js  get-header.js  get-tip-header.js  get-verifier-cells.js  get-withdraw-cell-reward.js  reclaim.js  send-tx.js  transfer.js  withdraw.js
src/app/: connector.js  disclaimer.js  header.js  layout.js  page.js
src/app/@connect/: page.js
src/app/@modal/: default.js
src/app/accounts/[address]/: account-header.js  assets.js  dao-cells.js  (+3 more)
src/app/inspect/: page.js
src/components/: capacity.js  dao-cycle-progress.js  packing-verifier-help-text.js  submit-button.js
src/hooks/: use-cell.js  use-header-by-number.js  use-header.js  use-tip-header.js  use-verifier-cells.js  use-withdraw-cell-rewards.js
src/lib/: app-config.js  base64.js  config.js  dao.js  runtime-config.js
src/lib/cobuild/: assets-manager.js  fee-manager.js  general-lock-actions.js  lock-actions.js  publishers.js  script-group.js  script-info.js  types.js
src/lib/lumos-adapter/: create-building-packet-from-skeleton.js  create-lumos-ckb-builder.js  create-skeleton-from-building-packet.js  init-lumos-common-scripts.js  pay-fee-with-building-packet.js
src/lib/papps/: papp.js
src/lib/wallet/: btc-wallet.js  joyid.js  okx.js  omni-lock.js  selector.js  unisat.js
test-vectors/: cobuild.tx.challenge.hex  cobuild.tx.json  witness_args.tx.challenge.hex  witness_args.tx.json
tests/: Cargo.toml
tests/src/: lib.rs  tests.rs
(+38 files in other folders)
