[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-testtool = "0.10"
blake2b-rs = "0.2.0"
ckb-hash = "0.112.1"
hex-literal = "0.4.1"
base64ct = { version = "1.6.0", features = ["std"] }
p256 = { version = "0.13.2", features = ["ecdsa"] }
ckb-transaction-cobuild = { git = "https://github.com/cryptape/ckb-transaction-cobuild-poc.git" }
