[package]
name = "joyid-cobuild-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.14.0"
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10", default-features = false }
base64ct = "1.6.0"
base16ct = "0.2.0"
ckb-hash = { version = "0.112.1", default-features = false, features = [
  "ckb-contract",
] }
ckb-transaction-cobuild = { git = "https://github.com/cryptape/ckb-transaction-cobuild-poc.git" }
